idf_component_register(SRCS 
"drivers/TTRX_TxInputReader.cpp" "drivers/TTRX_TxInputReader.h"
"TTRX_Exceptions.h" "TTRX_Exceptions.cpp"
"TTRX_Constants.cpp" 
"drivers/TTRX_Transmitter.h" "drivers/TTRX_Transmitter.cpp"
"main.cpp"
"drivers/TTRX_ChannelManager.h" "drivers/TTRX_ChannelManager.cpp"
"drivers/TTRX_HBridge.h" "drivers/TTRX_HBridge.cpp"
                    INCLUDE_DIRS "")
