idf_component_register(SRCS 
"drivers/TTRX_TxInputReader.cpp" "drivers/TTRX_TxInputReader.h"
"drivers/TTRX_ChannelManager.h" "drivers/TTRX_ChannelManager.cpp"
"drivers/TTRX_Transmitter.h" "drivers/TTRX_Transmitter.cpp"
"TTRX_Exceptions.h" "TTRX_Exceptions.cpp"
"TTRX_Constants.h" "TTRX_Constants.cpp" 
"main.cpp"
                    INCLUDE_DIRS "")
